ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprout-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sprout.connect
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      # - path: /sprout(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   frontend:
      #     service:
      #       name: frontend-service
      #       port:
      #         number: 80
